--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "devDependencies": {
     "@types/express": "^4.17.14",
     "@types/node": "^16.11.10",
+    "@types/swagger-jsdoc": "^6.0.1",
+    "@types/swagger-ui-express": "^4.1.3",
     "nodemon": "^2.0.20",
     "prisma": "^4.8.1",
-    "ts-node": "10.7.0",
     "typescript": "4.5.2"
   },
   "dependencies": {
@@ -21,10 +22,12 @@
     "jsonwebtoken": "^9.0.0",
     "pg": "^8.4.0",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^4.6.0",
+    "swagger-ui-express": "^4.6.1",
+    "ts-node": "10.7.0",
     "typeorm": "0.3.10"
   },
   "scripts": {
+    "build": "tsc",
     "start": "ts-node ./app/index.ts",
     "debug": "nodemon ./app/index.ts",
     "typeorm": "typeorm-ts-node-commonjs"
