--- a/fly-env/fly-dev.toml
+++ b/fly-env/fly-dev.toml
@@ -12,7 +12,7 @@ processes = []
   auto_rollback = true
 
 [deploy]
-  release_command = "npx prisma migrate deploy"
+  release_command = "npx prisma migrate reset -f && npx prisma migrate dev --name init"
 
 [[services]]
   http_checks = []
